# f1tenth_code_rasp

./: .gitignore  ANALISE_METICULOSA_TESTES_HIBRIDOS.md  CLAUDE.md  README.md  REFATORACAO_COMPLETA.md  task.md
.claude/: settings.local.json
.claude/commands/: arquiteto.md  code-review.md  debug.md  dev.md  planejamento.md
.cursor/rules/: custon-roles.mdc
CLAUDE/: 00_INDICE_DOCUMENTACAO_F1TENTH.md  99_RESUMO_EXECUTIVO_ANALISE.md  ANALISE_ERROS_E_CORRECOES.md  F1TENTH_BASIC_ODOMETRY_IMPLEMENTATION.md
CLAUDE/analises/: 01_ANALISE_ARQUITETURA_SISTEMA.md  17_DEBUG_ANALYSIS_F1TENTH_CYCLONE_LIDAR_ISSUES.md  18_DEBUG_ANALYSIS_F1TENTH_SLAM_QOS_NETWORK_ISSUES.md
CLAUDE/configuracoes/: 11_SETUP_COMPLETO_RASPBERRY.md
CLAUDE/correcoes/: 17_FIX_F1TENTH_CYCLONE_LIDAR_ACTION_PLAN.md  18_FIX_F1TENTH_SLAM_QOS_NETWORK_ACTION_PLAN.md  19_FIX_F1TENTH_TF_SELF_TRANSFORM_CARTOGRAPHER.md  20_FIX_CARTOGRAPHER_RVIZ_VISUALIZATION.md
CLAUDE/desenvolvimento/: 14_ROADMAP_TESTES_VESC.md  23_TESTE_INTEGRACAO_MOTOR_SERVO.md  24_DIAGNOSTICO_PROBLEMAS_MOTOR_SERVO.md  26_PERFORMANCE_ANALYSIS_PLAN.md  28_DIAGNOSTICO_PROBLEMAS_JOYSTICK.md  32_ANALISE_COMPLETA_PROBLEMA_MOTOR_SOLUCAO.md  33_REFATORACAO_COMPLETA_SCRIPTS_F1TENTH.md
CURSOR/: 00_INDICE_DOCUMENTACAO_F1TENTH.md  00_MARCO_SISTEMA_OPERACIONAL.md  06_STATUS_PROJETO_F1TENTH.md  21_REGRAS_WORKFLOW_SSH_RASPBERRY.md  99_RESUMO_EXECUTIVO_ANALISE.md
CURSOR/analises/: 01_ANALISE_ARQUITETURA_SISTEMA.md  02_ANALISE_PACOTES_ROS2.md  03_ANALISE_FLUXO_COMUNICACAO.md  04_RELATORIO_REVIEW_TECNICO_CODIGO.md  05_CALIBRACAO_SERVO_DESCOBERTAS.md  (+1 more)
config/: basic_odometry_config.yaml
log/: latest_build
scripts/: README.md  build_and_test_f1tenth.sh  build_f1tenth.sh  cleanup_legacy.sh  detect_8bitdo_controller.sh  diagnose_lidar.py  f1tenth.service  f1tenth_startup.sh  install_service.sh  post_build_setup.sh  test_f1tenth.sh  test_f1tenth_manual_control.sh  validate_refactoring.sh
src/f1tenth_control/: cyclonedx.xml  package.xml  setup.cfg  setup.py  setup_environment.sh
src/f1tenth_control/config/: control_params.yaml  enhanced_control_params.yaml  system_config.yaml
src/f1tenth_control/f1tenth_control/: enhanced_servo_control_node.py  initialpose_handler_node.py  servo_calibration.py  servo_control_node.py  servo_feedback_publisher.py  test_calibrated_servo.py  twist_to_ackermann_node.py
src/f1tenth_control/launch/: README.md  enhanced_f1tenth.launch.py  f1tenth_basic_odometry.launch.py  f1tenth_complete_system.launch.py  f1tenth_control.launch.py  f1tenth_full.launch.py  f1tenth_servo_only.launch.py  f1tenth_system.launch.py  f1tenth_system_fixed.launch.py  f1tenth_system_no_lidar.launch.py  f1tenth_vesc_only.launch.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  run_all_tests.py
(+56 files in other folders)
