[metadata]
# Metadados estáticos lidos pelo setup.py
license_file = LICENSE

[develop]
# Garante que os scripts sejam acessíveis durante o desenvolvimento
script_dir = $base/lib/f1tenth_control

[install]
# Otimização para compilar bytecode
optimize = 1

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8 